cmake_minimum_required(VERSION "3.21")
project(test-proto)
set(CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED true)

find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
# protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS addressbook.proto)
# protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS EXPORT_MACRO DLL_EXPORT addressbook.proto)
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS DESCRIPTORS PROTO_DESCS addressbook.proto)
# protobuf_generate_python(PROTO_PY addressbook.proto)
add_executable(main main.cc ${PROTO_SRCS} ${PROTO_HDRS})
target_link_libraries(main ${Protobuf_LIBRARIES})
